add decimal and muti bitfield idea to flags

--- a/data/analysis/05_flags.ipynb
+++ b/data/analysis/05_flags.ipynb
@@ -1209,10 +1209,406 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "transition",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "stage_1",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "9f486b3b-15da-45fd-b2ae-10bb55533185",
+       "rows": [
+        [
+         "0",
+         "123",
+         "2"
+        ],
+        [
+         "1",
+         "321",
+         "2"
+        ],
+        [
+         "2",
+         "456",
+         "5"
+        ],
+        [
+         "3",
+         "654",
+         "5"
+        ],
+        [
+         "4",
+         "111",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transition</th>\n",
+       "      <th>stage_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>123</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>321</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>456</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>654</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>111</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   transition  stage_1\n",
+       "0         123        2\n",
+       "1         321        2\n",
+       "2         456        5\n",
+       "3         654        5\n",
+       "4         111        1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# store states as decimals\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data\n",
+    "df = pd.DataFrame({'transition': [123, 321, 456, 654, 111]})\n",
+    "\n",
+    "# Parameters\n",
+    "stage = 1  # e.g. extract the second stage from the right (stage 1)\n",
+    "\n",
+    "# Extract stage using string slicing\n",
+    "df[f'stage_{stage}'] = df['transition'].astype(str).str.zfill(stage + 1).str[::-1].str[stage].astype(int)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "transition",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "composite_mask",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "888fb4e2-d35f-49aa-b5f4-3d93dc15de3d",
+       "rows": [
+        [
+         "0",
+         "243",
+         "1288"
+        ],
+        [
+         "1",
+         "321",
+         "2114"
+        ],
+        [
+         "2",
+         "456",
+         "4672"
+        ],
+        [
+         "3",
+         "654",
+         "16912"
+        ],
+        [
+         "4",
+         "111",
+         "546"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transition</th>\n",
+       "      <th>composite_mask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>243</td>\n",
+       "      <td>1288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>321</td>\n",
+       "      <td>2114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>456</td>\n",
+       "      <td>4672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>654</td>\n",
+       "      <td>16912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>111</td>\n",
+       "      <td>546</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   transition  composite_mask\n",
+       "0         243            1288\n",
+       "1         321            2114\n",
+       "2         456            4672\n",
+       "3         654           16912\n",
+       "4         111             546"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1 bitfield to represent stages of cats\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'transition': [243, 321, 456, 654, 111]})\n",
+    "max_stages = df['transition'].astype(str).str.len().max()\n",
+    "bits_per_stage = 4  # supports up to 16 categories per stage\n",
+    "\n",
+    "# Extract digits per stage\n",
+    "digits = df['transition'].astype(str).str.zfill(max_stages).str[::-1].apply(list)\n",
+    "\n",
+    "def encode_composite_mask(digits, bits_per_stage):\n",
+    "    mask = 0\n",
+    "    for i, d in enumerate(digits):\n",
+    "        mask |= (1 << int(d)) << (bits_per_stage * i)\n",
+    "    return mask\n",
+    "\n",
+    "df['composite_mask'] = digits.apply(lambda x: encode_composite_mask(x, bits_per_stage))\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "transition",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "composite_mask",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "34e72277-7898-43c8-8935-147989f047b1",
+       "rows": [
+        [
+         "0",
+         "243",
+         "1288"
+        ],
+        [
+         "1",
+         "321",
+         "2114"
+        ],
+        [
+         "2",
+         "456",
+         "4672"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transition</th>\n",
+       "      <th>composite_mask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>243</td>\n",
+       "      <td>1288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>321</td>\n",
+       "      <td>2114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>456</td>\n",
+       "      <td>4672</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   transition  composite_mask\n",
+       "0         243            1288\n",
+       "1         321            2114\n",
+       "2         456            4672"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if stage 1 has category 4\n",
+    "stage = 1\n",
+    "category = 4\n",
+    "bit = (1 << category) << (bits_per_stage * stage)\n",
+    "df[df['composite_mask'] & bit > 0]\n",
+    "\n",
+    "# Check if stage 0 has category 3 or 6\n",
+    "stage = 0\n",
+    "bit = ((1 << 3) | (1 << 6)) << (bits_per_stage * stage)\n",
+    "df[df['composite_mask'] & bit > 0]"
+   ]
   }
  ],
  "metadata": {
