--- a/concurrency/asyncio_tute/doco/concepts.ipynb
+++ b/concurrency/asyncio_tute/doco/concepts.ipynb
@@ -80,12 +80,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "8f149ea6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### ref\n",
+    "https://docs.python.org/3/howto/a-conceptual-overview-of-asyncio.html"
+   ]
   }
  ],
  "metadata": {
