add await coro eg

--- a/concurrency/asyncio_tute/doco/inner_workings.ipynb
+++ b/concurrency/asyncio_tute/doco/inner_workings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "637e8eaa",
    "metadata": {},
    "outputs": [],
@@ -150,9 +150,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76b080b1",
+   "metadata": {},
+   "source": [
+    "### does awaiting coro cede control? No"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0d991302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Sequential (no concurrency) ===\n",
+      "coro1: start\n",
+      "coro1: end\n",
+      "coro2: start\n",
+      "coro2: end\n",
+      "\n",
+      "=== Concurrent (event loop switches between coros) ===\n",
+      "coro1: start\n",
+      "coro2: start\n",
+      "coro2: end\n",
+      "coro1: end\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def coro1():\n",
+    "    print(\"coro1: start\")\n",
+    "    await asyncio.sleep(1)\n",
+    "    print(\"coro1: end\")\n",
+    "\n",
+    "async def coro2():\n",
+    "    print(\"coro2: start\")\n",
+    "    await asyncio.sleep(0.5)\n",
+    "    print(\"coro2: end\")\n",
+    "\n",
+    "async def main():\n",
+    "    # Awaiting coroutines directly, not wrapping in tasks\n",
+    "    await coro1()\n",
+    "    await coro2()\n",
+    "\n",
+    "async def concurrent_main():\n",
+    "    # Awaiting both coroutines concurrently\n",
+    "    await asyncio.gather(coro1(), coro2())\n",
+    "\n",
+    "print(\"=== Sequential (no concurrency) ===\")\n",
+    "await main()\n",
+    "\n",
+    "print(\"\\n=== Concurrent (event loop switches between coros) ===\")\n",
+    "await concurrent_main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b080b1",
+   "id": "b3f5a949",
    "metadata": {},
    "outputs": [],
    "source": []
