--- a/data/analysis/90_excel_writer.ipynb
+++ b/data/analysis/90_excel_writer.ipynb
@@ -78,7 +78,7 @@
          "type": "float"
         }
        ],
-       "ref": "92884fd9-016e-47bf-9215-89a886c6797e",
+       "ref": "91741fd8-f149-4fdd-b2a6-9095371f3d16",
        "rows": [
         [
          "0",
@@ -186,68 +186,68 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_e8a37_row0_col0, #T_e8a37_row0_col1, #T_e8a37_row0_col2, #T_e8a37_row1_col0, #T_e8a37_row2_col0, #T_e8a37_row2_col1, #T_e8a37_row2_col2 {\n",
+       "#T_882f9_row0_col0, #T_882f9_row0_col1, #T_882f9_row0_col2, #T_882f9_row1_col0, #T_882f9_row2_col0, #T_882f9_row2_col1, #T_882f9_row2_col2 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "}\n",
-       "#T_e8a37_row1_col1 {\n",
+       "#T_882f9_row1_col1 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "  background-color: yellow;\n",
        "}\n",
-       "#T_e8a37_row1_col2 {\n",
+       "#T_882f9_row1_col2 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "  color: red;\n",
        "}\n",
-       "#T_e8a37_level0_row0, #T_e8a37_level0_row1, #T_e8a37_level0_row2 {\n",
+       "#T_882f9_level0_row0, #T_882f9_level0_row1, #T_882f9_level0_row2 {\n",
        "  background-color: lightblue;\n",
        "  color: black;\n",
        "}\n",
-       "#T_e8a37_level0_col0, #T_e8a37_level0_col1, #T_e8a37_level0_col2 {\n",
+       "#T_882f9_level0_col0, #T_882f9_level0_col1, #T_882f9_level0_col2 {\n",
        "  background-color: green;\n",
        "  color: black;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_e8a37\">\n",
+       "<table id=\"T_882f9\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_e8a37_level0_col0\" class=\"col_heading level0 col0\" >who</th>\n",
-       "      <th id=\"T_e8a37_level0_col1\" class=\"col_heading level0 col1\" >n</th>\n",
-       "      <th id=\"T_e8a37_level0_col2\" class=\"col_heading level0 col2\" >survival_rate</th>\n",
+       "      <th id=\"T_882f9_level0_col0\" class=\"col_heading level0 col0\" >who</th>\n",
+       "      <th id=\"T_882f9_level0_col1\" class=\"col_heading level0 col1\" >n</th>\n",
+       "      <th id=\"T_882f9_level0_col2\" class=\"col_heading level0 col2\" >survival_rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8a37_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_e8a37_row0_col0\" class=\"data row0 col0\" >child</td>\n",
-       "      <td id=\"T_e8a37_row0_col1\" class=\"data row0 col1\" >83</td>\n",
-       "      <td id=\"T_e8a37_row0_col2\" class=\"data row0 col2\" >0.590000</td>\n",
+       "      <th id=\"T_882f9_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_882f9_row0_col0\" class=\"data row0 col0\" >child</td>\n",
+       "      <td id=\"T_882f9_row0_col1\" class=\"data row0 col1\" >83</td>\n",
+       "      <td id=\"T_882f9_row0_col2\" class=\"data row0 col2\" >0.590000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8a37_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_e8a37_row1_col0\" class=\"data row1 col0\" >man</td>\n",
-       "      <td id=\"T_e8a37_row1_col1\" class=\"data row1 col1\" >537</td>\n",
-       "      <td id=\"T_e8a37_row1_col2\" class=\"data row1 col2\" >0.160000</td>\n",
+       "      <th id=\"T_882f9_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_882f9_row1_col0\" class=\"data row1 col0\" >man</td>\n",
+       "      <td id=\"T_882f9_row1_col1\" class=\"data row1 col1\" >537</td>\n",
+       "      <td id=\"T_882f9_row1_col2\" class=\"data row1 col2\" >0.160000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8a37_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_e8a37_row2_col0\" class=\"data row2 col0\" >woman</td>\n",
-       "      <td id=\"T_e8a37_row2_col1\" class=\"data row2 col1\" >271</td>\n",
-       "      <td id=\"T_e8a37_row2_col2\" class=\"data row2 col2\" >0.760000</td>\n",
+       "      <th id=\"T_882f9_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_882f9_row2_col0\" class=\"data row2 col0\" >woman</td>\n",
+       "      <td id=\"T_882f9_row2_col1\" class=\"data row2 col1\" >271</td>\n",
+       "      <td id=\"T_882f9_row2_col2\" class=\"data row2 col2\" >0.760000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x275a1b2c980>"
+       "<pandas.io.formats.style.Styler at 0x1c5383f0ad0>"
       ]
      },
      "execution_count": 5,
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Usage"
+    "### Basic usage"
    ]
   },
   {
