--- a/web/sockets/websockets_game_eg/test.ipynb
+++ b/web/sockets/websockets_game_eg/test.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "175c6e21",
+   "metadata": {},
+   "source": [
+    "[tute in docu ](https://dokk.org/documentation/python-websockets/10.4/intro/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "e3463975",
