--- a/data/analysis/25_sfa.ipynb
+++ b/data/analysis/25_sfa.ipynb
@@ -2,29 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import statsmodels.api as sm\n",
-    "from scipy import stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VERSION = \"2025-06-11\""
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylibs.sfa import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,83 +58,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### signal calc"
+    "### signals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "who",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "n",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "survived_rate",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "5f41aded-cb0d-40c2-90cf-bb5be5c01960",
+       "rows": [
+        [
+         "child",
+         "83",
+         "0.5903614457831325"
+        ],
+        [
+         "man",
+         "537",
+         "0.16387337057728119"
+        ],
+        [
+         "woman",
+         "271",
+         "0.7564575645756457"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>survived_rate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>who</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>child</th>\n",
+       "      <td>83</td>\n",
+       "      <td>0.590361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>man</th>\n",
+       "      <td>537</td>\n",
+       "      <td>0.163873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>woman</th>\n",
+       "      <td>271</td>\n",
+       "      <td>0.756458</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         n  survived_rate\n",
+       "who                      \n",
+       "child   83       0.590361\n",
+       "man    537       0.163873\n",
+       "woman  271       0.756458"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def calculate_signal(\n",
-    "    df,\n",
-    "    col,\n",
-    "    target_col,\n",
-    "    seg_col=None,\n",
-    "    exposure_col=None,\n",
-    "    exposure_on_target_too=True,\n",
-    "):\n",
-    "\n",
-    "    df = df.copy()\n",
-    "\n",
-    "    # placeholder col for segment column\n",
-    "    if seg_col is None:\n",
-    "        seg_col = \"_seg\"\n",
-    "        if seg_col in df.columns:\n",
-    "            raise ValueError(f\"Column '{seg_col}' is reserved, change column name.\")\n",
-    "        df[seg_col] = \"all\"\n",
-    "\n",
-    "    # aggregate\n",
-    "    agg_dict = {}\n",
-    "    agg_dict[\"count\"] = (target_col, np.size)\n",
-    "    agg_dict[target_col] = (target_col, \"sum\")\n",
-    "    if exposure_col is not None:\n",
-    "        agg_dict[exposure_col] = (exposure_col, \"sum\")\n",
-    "\n",
-    "        if exposure_on_target_too:\n",
-    "            tar_exp = f\"{target_col}_{exposure_col}\"\n",
-    "            df[tar_exp] = df[target_col].mul(df[exposure_col])\n",
-    "            agg_dict[tar_exp] = (tar_exp, \"sum\")\n",
-    "\n",
-    "    _ = df.groupby([seg_col, col], dropna=False, observed=False)\n",
-    "    _ = _.agg(**agg_dict)\n",
-    "\n",
-    "    # count dist\n",
-    "    grps = _.groupby(seg_col, dropna=False, observed=False)\n",
-    "    for name, group in grps:\n",
-    "        group[\"count_dist\"] = group[\"count\"].div(group[\"count\"].sum())\n",
-    "        _.loc[group.index, [\"count_dist\"]] = group[[\"count_dist\"]]\n",
-    "\n",
-    "    # rates\n",
-    "    grps = _.groupby(seg_col, dropna=False, observed=False)\n",
-    "    for name, group in grps:\n",
-    "        group[f\"{target_col}_dist\"] = group[target_col].div(group[target_col].sum())\n",
-    "        group[f\"{target_col}_rate\"] = group[target_col].div(group[\"count\"])\n",
-    "        _.loc[group.index, [f\"{target_col}_dist\", f\"{target_col}_rate\"]] = group[\n",
-    "            [f\"{target_col}_dist\", f\"{target_col}_rate\"]\n",
-    "        ]\n",
-    "\n",
-    "    # exp rates\n",
-    "    if exposure_col is not None:\n",
-    "        grps = _.groupby(seg_col, dropna=False, observed=False)\n",
-    "        for name, group in grps:\n",
-    "            group[f\"{tar_exp}_dist\"] = group[tar_exp].div(group[tar_exp].sum())\n",
-    "            group[f\"{tar_exp}_rate\"] = group[tar_exp].div(group[exposure_col])\n",
-    "\n",
-    "            _.loc[group.index, [f\"{tar_exp}_dist\", f\"{tar_exp}_rate\"]] = group[\n",
-    "                [f\"{tar_exp}_dist\", f\"{tar_exp}_rate\"]\n",
-    "            ]\n",
-    "\n",
-    "    if seg_col == \"_seg\":\n",
-    "        _.index = _.index.droplevel(0)\n",
-    "\n",
-    "    return _"
+    "df2 = df.groupby([\"who\"], dropna=False, observed=False).agg(\n",
+    "    **{\n",
+    "        \"n\": (\"who\", \"size\"),\n",
+    "        \"survived_rate\": (\"survived\", \"mean\"),\n",
+    "    }\n",
+    ")\n",
+    "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +663,6 @@
     }
    ],
    "source": [
-    "# example\n",
     "edges = [-np.inf, 0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, np.inf]\n",
     "df[\"age_binned\"] = pd.cut(df[\"age\"], bins=edges, right=False)\n",
     "df2 = calculate_signal(df, target_col=\"survived\", col=\"age_binned\", exposure_col=\"fare\")\n",
@@ -2094,7 +2139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# auto histogram binning\n",
+    "# bin by even width\n",
     "edges = np.histogram_bin_edges(df[\"age\"].dropna(), bins=4)\n",
     "df[\"age_binned\"] = pd.cut(df[\"age\"], bins=edges, right=False)"
    ]
@@ -2134,55 +2179,6 @@
    "metadata": {},
    "source": [
     "### single plots - bar and line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.ticker as mtick\n",
-    "\n",
-    "\n",
-    "def plot_one_bar_and_line(\n",
-    "    df,\n",
-    "    col,\n",
-    "    target_col,\n",
-    "    rotation=0,\n",
-    "    y_lim=(None, None),\n",
-    "    ax2_y_lim=(None, None),\n",
-    "    figsize=(7.5, 5),\n",
-    "    ax=None,\n",
-    "    pct_decimals=1,\n",
-    "    title_prefix=\"\",\n",
-    "):\n",
-    "    df2 = df.copy()\n",
-    "\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots(figsize=figsize)\n",
-    "    else:\n",
-    "        fig = ax.get_figure()\n",
-    "\n",
-    "    index = df2.index\n",
-    "    title = f\"{col} & {target_col} by {index.name}\"\n",
-    "    x_ticks = index.astype(str)\n",
-    "\n",
-    "    ax.bar(x_ticks, df2[col])\n",
-    "    ax.set_xticks(x_ticks)\n",
-    "    ax.set_xticklabels(x_ticks, rotation=rotation)\n",
-    "    ax.set_xlabel(index.name)\n",
-    "    ax.set_ylabel(col, loc=\"center\")\n",
-    "    ax.set_ylim(*y_lim)\n",
-    "    ax.set_title(f\"{title_prefix}{title}\")\n",
-    "\n",
-    "    ax2 = ax.twinx()\n",
-    "    ax2.plot(x_ticks, df2[target_col], color=\"red\", marker=\"o\")\n",
-    "    ax2.set_ylabel(target_col, loc=\"bottom\")\n",
-    "    ax2.yaxis.set_major_formatter(mtick.PercentFormatter(1.0, decimals=pct_decimals))\n",
-    "    ax2.set_ylim(*ax2_y_lim)\n",
-    "\n",
-    "    return fig, (ax, ax2)"
    ]
   },
   {
@@ -2237,49 +2233,6 @@
    "metadata": {},
    "source": [
     "### single plots - multi-line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_multi_lines(\n",
-    "    df,\n",
-    "    col,\n",
-    "    rotation=0,\n",
-    "    y_lim=(None, None),\n",
-    "    figsize=(15, 5),\n",
-    "    ax=None,\n",
-    "    pct_decimals=None,\n",
-    "):\n",
-    "    df2 = df.copy()\n",
-    "\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots(figsize=figsize)\n",
-    "    else:\n",
-    "        fig = ax.get_figure()\n",
-    "\n",
-    "    # first index is the segments, second is the x-axis\n",
-    "    index_names = df2.index.names\n",
-    "    df2.reset_index(inplace=True)\n",
-    "    pdf = df2.pivot(index=index_names[1], columns=index_names[0], values=col)\n",
-    "    pdf.plot(\n",
-    "        ax=ax,\n",
-    "        marker=\"o\",\n",
-    "        rot=rotation,\n",
-    "        title=f\"{col} by {index_names[1]}\",\n",
-    "        legend=True,\n",
-    "        xlabel=index_names[1],\n",
-    "        ylabel=col,\n",
-    "        ylim=y_lim,\n",
-    "        grid=True,\n",
-    "    )\n",
-    "    if pct_decimals is not None:\n",
-    "        ax.yaxis.set_major_formatter(mtick.PercentFormatter(1.0, decimals=pct_decimals))\n",
-    "\n",
-    "    return fig, ax, pdf"
    ]
   },
   {
@@ -3788,60 +3741,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_bar_and_line_by_segment(\n",
-    "    df,\n",
-    "    col,\n",
-    "    target_col,\n",
-    "    rotation=0,\n",
-    "    y_lim=(None, None),\n",
-    "    ax2_y_lim=(None, None),\n",
-    "    figsize=(15, 5),\n",
-    "    plots_in_each_row=2,\n",
-    "    pct_decimals=1,\n",
-    "):\n",
-    "\n",
-    "    df2 = df.copy()\n",
-    "\n",
-    "    # plot for each segment\n",
-    "    segs = df2.index.levels[0]\n",
-    "\n",
-    "    rows = int(np.ceil(len(segs) / plots_in_each_row))\n",
-    "\n",
-    "    for row in range(rows):\n",
-    "        start = row * plots_in_each_row\n",
-    "        end = start + plots_in_each_row\n",
-    "\n",
-    "        df3 = df2.loc[segs[start:end], :]\n",
-    "\n",
-    "        fig, ax = plt.subplots(1, plots_in_each_row, figsize=figsize)\n",
-    "\n",
-    "        indexes_in_this_row = df3.index.levels[0][start:end]\n",
-    "        for i, seg in enumerate(indexes_in_this_row):\n",
-    "            if plots_in_each_row == 1:\n",
-    "                ax2 = ax\n",
-    "            else:\n",
-    "                ax2 = ax[i]\n",
-    "\n",
-    "            # plot each segment\n",
-    "            plot_one_bar_and_line(\n",
-    "                df=df3.loc[seg],\n",
-    "                col=col,\n",
-    "                target_col=target_col,\n",
-    "                rotation=rotation,\n",
-    "                y_lim=y_lim,\n",
-    "                ax2_y_lim=ax2_y_lim,\n",
-    "                ax=ax2,\n",
-    "                pct_decimals=pct_decimals,\n",
-    "                title_prefix=f\"{seg} - \",\n",
-    "            )"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -5072,72 +4971,6 @@
    "metadata": {},
    "source": [
     "### multi-plots - distribution pairs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_bar_and_line_dist_pairs_by_segment(\n",
-    "    df,\n",
-    "    col,\n",
-    "    target_col,\n",
-    "    rotation=0,\n",
-    "    y_lim=(None, None),\n",
-    "    y_lim2=(None, None),\n",
-    "    ax2_y_lim=(None, None),\n",
-    "    figsize=(15, 5),\n",
-    "    pct_decimals=1,\n",
-    "):\n",
-    "\n",
-    "    df2 = df.copy()\n",
-    "\n",
-    "    # add dummy index for single level\n",
-    "    if df2.index.nlevels == 1:\n",
-    "        df2.index = pd.MultiIndex.from_product(\n",
-    "            [[\"all\"], df2.index], names=[\"all\", df2.index.name]\n",
-    "        )\n",
-    "    elif len(df2.index.levels) > 2:\n",
-    "        raise ValueError(\n",
-    "            f\"index levels in input can only be 1 or 2, {df2.index.levels = }\"\n",
-    "        )\n",
-    "\n",
-    "    # plot for each segment\n",
-    "    segs = df2.index.levels[0]\n",
-    "\n",
-    "    for seg in segs:\n",
-    "\n",
-    "        df3 = df2.loc[seg, :]\n",
-    "\n",
-    "        fig, ax = plt.subplots(1, 2, figsize=figsize)\n",
-    "\n",
-    "        if segs.size > 1:\n",
-    "            fig.suptitle(f\"{seg}\", fontsize=16)\n",
-    "\n",
-    "        plot_one_bar_and_line(\n",
-    "            df=df3,\n",
-    "            col=col,\n",
-    "            target_col=target_col,\n",
-    "            rotation=rotation,\n",
-    "            y_lim=y_lim,\n",
-    "            ax2_y_lim=ax2_y_lim,\n",
-    "            ax=ax[0],\n",
-    "            pct_decimals=pct_decimals,\n",
-    "        )\n",
-    "        plot_one_bar_and_line(\n",
-    "            df=df3,\n",
-    "            col=f\"{col}_dist\",\n",
-    "            target_col=target_col,\n",
-    "            rotation=rotation,\n",
-    "            y_lim=y_lim2,\n",
-    "            ax2_y_lim=ax2_y_lim,\n",
-    "            ax=ax[1],\n",
-    "            pct_decimals=pct_decimals,\n",
-    "        )\n",
-    "\n",
-    "    plt.show()"
    ]
   },
   {
