add histo funcs and fix

--- a/data/analysis/23_histogram.ipynb
+++ b/data/analysis/23_histogram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,15 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylibs.histo_funcs import *"
    ]
   },
   {
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,152 +85,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### funcs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_7_numbers(dat: pd.Series) -> list[float]:\n",
-    "    qtls = dat.quantile([0.25, 0.5, 0.75]).to_list()\n",
-    "    icr_1_point_5 = (qtls[2] - qtls[0]) * 1.5\n",
-    "    fivnum = [\n",
-    "        dat.min(),\n",
-    "        max(qtls[0] - icr_1_point_5, dat.min()),\n",
-    "        qtls[0],\n",
-    "        qtls[1],\n",
-    "        qtls[2],\n",
-    "        min(qtls[2] + icr_1_point_5, dat.max()),\n",
-    "        dat.max(),\n",
-    "    ]\n",
-    "    return fivnum\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def even_width_bins(dat: pd.Series, nbins: int) -> list[float]:\n",
-    "    return np.arange(dat.min(), dat.max() + (dat.max() - dat.min()) / nbins, (dat.max() - dat.min()) / nbins)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bin_cat_to_pct_labels(cats: pd.Index) -> list[str]:\n",
-    "    \"\"\"cat is [)\"\"\"\n",
-    "    labels = []\n",
-    "    for category in cats:\n",
-    "        if pd.isna(category):\n",
-    "            labels.append(\"NaN\")\n",
-    "        else:\n",
-    "            left = category.left\n",
-    "            right = category.right\n",
-    "            mid = (left + right) / 2\n",
-    "            labels.append(f\"[{left:.0%} - {right:.0%})\")\n",
-    "    return labels\n",
-    "\n",
-    "def bin_cat_to_mid_labels(cats: pd.Index) -> list[str]:\n",
-    "    labels = []\n",
-    "    for category in cats:\n",
-    "        if pd.isna(category):\n",
-    "            labels.append(\"NaN\")\n",
-    "        else:\n",
-    "            left = category.left\n",
-    "            right = category.right\n",
-    "            mid = (left + right) / 2\n",
-    "            labels.append(f\"~{mid:.0%}\")\n",
-    "    return labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_freq_signal(sdf:pd.DataFrame, col) -> pd.DataFrame:\n",
-    "    sdf = (\n",
-    "        sdf\n",
-    "        .loc[lambda x: x[col].notna(), :]\n",
-    "        .groupby([col], dropna=False, observed=False).agg(\n",
-    "            **{\n",
-    "                \"n\": (col, \"size\"),\n",
-    "            }\n",
-    "        )\n",
-    "    )\n",
-    "    sdf[f\"{col}_freq\"] = sdf[\"n\"] / sdf[\"n\"].sum()\n",
-    "    return sdf\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def plot_pct_interval_histogram(x_ticks, x_labels, y, ax=None) -> tuple:\n",
-    "\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
-    "    else:\n",
-    "        fig = ax.get_figure()\n",
-    "\n",
-    "    ax.bar(\n",
-    "        x_ticks,\n",
-    "        y,\n",
-    "        width=0.8,\n",
-    "        alpha=0.7,\n",
-    "        color=\"lightblue\",\n",
-    "        edgecolor=\"black\",\n",
-    "    )\n",
-    "    for x, yv in zip(x_ticks, y):\n",
-    "        ax.text(x, yv, f\"{yv:.1%}\", ha=\"center\", va=\"bottom\")\n",
-    "    ax.set_xticks(x_ticks, x_labels, rotation=45, ha=\"right\")\n",
-    "\n",
-    "    ax.grid(True, linestyle=\"--\", alpha=0.5)\n",
-    "\n",
-    "    return fig, ax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pct_histogram_from_edges(dat:pd.DataFrame, col:str, edges:list, ax:None) -> tuple:\n",
-    "\n",
-    "    hist[f\"{col}_binned\"] = pd.cut(hist[col], bins=edges, right=False)\n",
-    "    freqs = calc_freq_signal(hist, col = f\"{col}_binned\")\n",
-    "    fig, ax = plot_pct_interval_histogram(\n",
-    "        x_ticks = np.arange(freqs.shape[0], dtype=int), \n",
-    "        x_labels = bin_cat_to_pct_labels(freqs.index), \n",
-    "        y = freqs[f\"{col}_binned_freq\"],\n",
-    "        ax = ax,\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 5 numbers / box plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +105,7 @@
        " np.float64(0.4575388620874492)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,40 +148,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "col = \"r_12m\"\n",
+    "ff = lambda x: ~x[col].isna()\n",
     "\n",
     "# even width\n",
     "pct_histogram_from_edges(\n",
-    "    dat = hist[\"r_12m\"].dropna(),\n",
-    "    col = \"r_12m\",\n",
-    "    edges = np.histogram_bin_edges(hist[\"r_12m\"].dropna(), bins=10),\n",
+    "    df = hist,\n",
+    "    ff = ff,\n",
+    "    col = col,\n",
+    "    edges = np.histogram_bin_edges(hist.loc[ff,col], bins=10),\n",
     "    ax = axs[0][0]\n",
     ")\n",
     "\n",
     "# even width 2\n",
     "pct_histogram_from_edges(\n",
-    "    dat = hist[\"r_12m\"].dropna(),\n",
-    "    col = \"r_12m\",\n",
+    "    df = hist,\n",
+    "    ff= ff,\n",
+    "    col = col,\n",
     "    edges = np.linspace(-0.5, 0.5, 11),\n",
     "    ax = axs[0][1]\n",
     ")\n",
     "\n",
     "# by proportion\n",
     "pct_histogram_from_edges(\n",
-    "    dat = hist[\"r_12m\"].dropna(),\n",
-    "    col = \"r_12m\",\n",
-    "    edges = hist[\"r_12m\"].dropna().quantile([0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]).to_list(),\n",
+    "    df = hist,\n",
+    "    ff= ff,\n",
+    "    col = col,\n",
+    "    edges = hist.loc[ff,col].quantile([0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]).to_list(),\n",
     "    ax = axs[1][0]\n",
     ")\n",
     "\n",
     "# defined\n",
     "pct_histogram_from_edges(\n",
-    "    dat = hist[\"r_12m\"].dropna(),\n",
-    "    col = \"r_12m\",\n",
+    "    df = hist,\n",
+    "    ff= ff,\n",
+    "    col = col,\n",
     "    edges = [-np.inf, -0.0, 0.05, 0.15, np.inf],\n",
     "    ax = axs[1][1]\n",
     ")\n",
@@ -323,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +208,7 @@
        "<Figure size 1600x1200 with 4 Axes>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
