--- a/data/analysis/05_flags.ipynb
+++ b/data/analysis/05_flags.ipynb
@@ -1,12 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A column of binary numbers can be treated as bitfields, where each bit acts as a binary flag representing a feature, and bitwise operations with bitmasks allow efficient querying and manipulation of these flags for analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_flags_from_flags_dict(bitfield: int, flags: dict[str, int]) -> list[str]:\n",
+    "    return [name for name, value in flags.items() if bitfield & value]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import IntFlag\n",
+    "\n",
+    "def decode_flags(bitfield: int, flags: IntFlag) -> list[str]:\n",
+    "    return [name for name, value in flags.__members__.items() if bitfield & value]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### spec"
    ]
   },
   {
@@ -41,35 +77,6 @@
     "df = pd.read_csv(\"titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### funcs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def decode_flags_from_flags_dict(bitfield: int, flags: dict[str, int]) -> list[str]:\n",
-    "    return [name for name, value in flags.items() if bitfield & value]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from enum import IntFlag\n",
-    "\n",
-    "def decode_flags(bitfield: int, flags: IntFlag) -> list[str]:\n",
-    "    return [name for name, value in flags.__members__.items() if bitfield & value]"
    ]
   },
   {
